--- a/index.html
+++ b/index.html
@@ -13,4 +13,14 @@
     <a href="#">serviços</a>
     <a href="#">contatos</a>
 </nav>
+</header>
+
+<main>
+    <section class="conteudo">
+<h2>noticias recentes</h2>
+<p>fique por dentro das ultimas novidades da semana.</p>
+</section
+</main>
+</body>
+</html>
     
